--- a/themes/hello-friend-ht/static/style.css
+++ b/themes/hello-friend-ht/static/style.css
@@ -38,7 +38,7 @@
   margin: 1em;
 
   color: #222222;
-  background-color: #fafafa;
+  background-color: #d1d1e0;
 
   border-radius: 10px;
   overflow: hidden;
